@@ -188,8 +188,8 @@ public class ImageLab {
                             "imagelab.ImageFilter");
                     } //for ja
                     if (isFilter) {
-                        ifilter = (ImageFilter) cl.getDeclaredConstructor()
-                            .newInstance();
+                        ifilter = (ImageFilter)
+                                    cl.getDeclaredConstructor().newInstance();
                         filters.add(ifilter);
                         JMenuItem jmi = new JMenuItem(ifilter.getMenuLabel());
                         filter.add(jmi);
@@ -287,8 +287,8 @@ public class ImageLab {
             public void actionPerformed(final ActionEvent e) {
                 ImgProvider improvider; // Hold the image
                 FileDialog fd;
-                fd = new FileDialog(
-                    frame, "Pick an image", FileDialog.LOAD);
+                fd = new FileDialog(frame, "Pick an image",
+                                    FileDialog.LOAD);
                 fd.setVisible(true);
                 String theFile = fd.getFile();
                 String theDir = fd.getDirectory();
@@ -335,8 +335,8 @@ public class ImageLab {
                 //The imgProvider holding the image
                 ImgProvider improvider = impro;
                 if (improvider == null) {
-                    JOptionPane.showMessageDialog(
-                        myframe, "First select the image to play");
+                    JOptionPane.showMessageDialog(myframe,
+                                                "First select the image to play");
                     return;
                 } //if
                 improvider.play();
@@ -355,8 +355,8 @@ public class ImageLab {
             public void actionPerformed(final ActionEvent e) {
                 ImgProvider improvider = impro; // Hold the image.
                 if (improvider == null) {
-                    JOptionPane.showMessageDialog(
-                        myframe, "Select the image to save");
+                    JOptionPane.showMessageDialog(myframe,
+                                                "Select the image to save");
                     return;
                 } //if
                 improvider.save();
